messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-messaging-app
  template:
    metadata:
      labels:
        app: django-messaging-app
    spec:
      containers:
      - name: django-container
        image: davetech3011/django-messaging-app:1.0
 
        ports:
        - containerPort: 8000  
---
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service
spec:
  type: ClusterIP
  selector:
    app: django-messaging-app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
